tests/ui/imports/no-std-inject.rs
//@ edition: 2015
#![no_std]

extern crate core; //~ ERROR: the name `core` is defined multiple times
extern crate std;

fn main() {}

// ferrocene-annotations: fls_gklst7joeo33
// External Crates
